This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Py_ARRAY_LENGTH macro incorrect with GCC < 3.1
Type: compile error Stage: resolved
Components: Build Versions: Python 3.3, Python 3.4
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: christian.heimes Nosy List: Jeffrey.Armstrong, christian.heimes
Priority: normal Keywords:

Created on 2013-01-06 15:32 by Jeffrey.Armstrong, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (2)
msg179187 - (view) Author: Jeffrey Armstrong (Jeffrey.Armstrong) * Date: 2013-01-06 15:32
The Py_ARRAY_LENGTH macro (Include/pymacro.h:36) checks to see if using GCC by simply looking for __GCC__ being defined.  If so, it uses the GCC extension function "__builtin_types_compatible_p."  However, this function was not introduced until GCC 3.1.  This simple check for a GCC compiler causes the Python build to fail on GCC < 3.1 (2.95 for example).

The check should actually be:

#if (defined(__GNUC__) && !defined(__STRICT_ANSI__) && \
    ((__GNUC__ == 3) && (__GNU_MINOR__) >= 1) || (__GNUC__ >= 4)))

Similar checks are made in other locations in the core library, just not here.  

This bug was discovered while attempting a build on m68k-atari-mint, which relies on GCC 2.95.3.  Other systems may also be using this compiler still.
msg179188 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2013-01-06 15:43
Fixed in http://hg.python.org/cpython/rev/13c83199c211
History
Date User Action Args
2022-04-11 14:57:40adminsetgithub: 61085
2013-01-06 15:43:18christian.heimessetstatus: open -> closed

assignee: christian.heimes
versions: + Python 3.4
nosy: + christian.heimes

messages: + msg179188
resolution: fixed
stage: resolved
2013-01-06 15:32:47Jeffrey.Armstrongcreate