Issue #16881: Fix Py_ARRAY_LENGTH macro for GCC < 3.1.